# CSD3156-RaceCast

./: README.md
RaceCast/: settings.gradle.kts
RaceCast/app/: build.gradle.kts
RaceCast/app/src/androidTest/java/com/example/racecast/: ExampleInstrumentedTest.kt
RaceCast/app/src/main/: AndroidManifest.xml
RaceCast/app/src/main/assets/image/: night_bg.aseprite
RaceCast/app/src/main/assets/shaders/: BatchRenderer.frag  BatchRenderer.vert
RaceCast/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
RaceCast/app/src/main/cpp/GSM/: GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  Map1.cpp  Map1.h  Map2.cpp  Map2.h  Map3.cpp  Map3.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  SelectionState.cpp  SelectionState.h
RaceCast/app/src/main/cpp/Game/: CheckpointManager.cpp  CheckpointManager.h  Environment.cpp  Environment.h  Environment.tpp  GameObject.cpp  GameObject.h  HighScore.cpp  HighScore.h
RaceCast/app/src/main/cpp/Graphics/: BatchRenderer.cpp  BatchRenderer.h  FontAsset.cpp  FontAsset.h  RayCaster.cpp  RayCaster.h  ShaderManager.cpp  ShaderManager.h
RaceCast/app/src/main/cpp/Utilities/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Globals.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  UIHelper.cpp  UIHelper.h
RaceCast/app/src/main/java/com/example/racecast/: MainActivity.kt  MyGLSurfaceView.kt  renderer.kt
RaceCast/app/src/main/res/values/: strings.xml  themes.xml
RaceCast/app/src/main/res/values-night/: themes.xml
RaceCast/app/src/test/java/com/example/racecast/: ExampleUnitTest.kt
RaceCast/gradle/wrapper/: gradle-wrapper.properties
